clock function added

--- a/google.html
+++ b/google.html
@@ -3,26 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Clone</title>
+    <title>Document</title>
 </head>
 <body>
-<div class = "main">
-<div class = "Icon">
-    <image  type = "text" src ="./gIcon.png" width = '300px' />
-</div> 
-    <div class = "searchBar"><input class = 'searchbar'
-        placeholder="검색어를 입력하세요"/>
-    </div>
-        <div class = "buttons">
-    <button class= "googleSearch">Google 검색</button>
-</div>
-<div class="icons">
-     <image class = "gmail" src = "./gmail.png"/>
-     <image class = "effi" src = './effi.png'/>
-     <image class ='lightshot' src ='./lightshot.png'/>
-</div>
-<script src = "./google.js"></script>
-<link rel = "styleSheet" href="./google.css" /> 
-</div>   
+    
 </body>
 </html>
