--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <div class = "main">
-<div class = "Icon">
+    <div class="clock"></div>
+    <div class = "Icon">
     <image  type = "text" src ="./gIcon.png" width = '300px' />
 </div> 
     <div class = "searchBar"><input class = 'searchbar'
